<resources>
    <string name="app_name">MySecondApplication</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a Message</string>
    <string name="button_TurnOn">Turn Bluetooth On/Off</string>
    <string name="button_FindClass">Show Destination Class</string>
    <string name="button_FindMe">Show Current Location</string>
    <string name="button_SetAlarm">Set Alarm</string>
    <string name="button_EmergencyExit">Show Emergency Exit</string>
    <string name="button_Exit">Exit</string>
    <string name="title_activity_display_message">My Message</string>
</resources>
