<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_my">

    <Button
        android:id="@+id/turnOn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_TurnOn"
        android:onClick="turnOn"/>
        <!--android:layout_alignParentTop="true" />-->

    <Button
        android:id="@+id/findMe"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_FindMe"
        android:onClick="turnOn"/>
        <!--android:layout_below="@id/turnOn"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/findClass"/>-->

    <Button
        android:id="@+id/findClass"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_FindClass"
        android:onClick="turnOn"/>
        <!--android:layout_alignParentEnd="true"
        android:layout_below="@id/turnOn"
        android:layout_toEndOf="@+id/findMe"/>-->

    <Button
        android:id="@+id/Emergency"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_EmergencyExit"
        android:onClick="turnOn"/>
        <!--android:layout_alignParentStart="true"
        android:layout_below="@id/findMe"
        android:layout_toStartOf="@+id/setAlarm"/>-->

    <Button
        android:id="@+id/setAlarm"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_SetAlarm"
        android:onClick="turnOn"/>
        <!--android:layout_alignParentEnd="true"
        android:layout_below="@id/findClass"
        android:layout_toEndOf="@+id/Emergency"/>-->

    <Button
        android:id="@+id/exit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_Exit"
        android:onClick="Finish"/>
     <!--   android:layout_below="@+id/Emergency"/>-->

</LinearLayout>
